Changes for Perl programming language extension Parse-CPAN-Meta

{{$NEXT}}

    - Add CPAN_META_JSON_BACKEND to allow requesting non-JSON.pm backends

1.4417    2015-06-09 16:19:41-06:00 America/Denver

    - No changes from 1.4416

1.4416    2015-05-19 11:11:47-04:00 America/New_York (TRIAL RELEASE)

    [FIXED]

    - Minimum Perl was inadvertently set to v5.10.0.  Now back to v5.8.1.

1.4415    2015-04-28 11:29:52-04:00 America/New_York (TRIAL RELEASE)

    [TESTS]

    - Outputs the version of backends used

    [META]

    - Updated repo metadata and boilerplate files

    - Pointed issue tracker to the Perl-Toolchain-Gang Github repo

1.4414    2014-03-04 15:22:00-05:00 America/New_York

    [ADDED]

    - Added load_string, which uses heuristics to guess YAML/JSON content

    [CHANGED]

    - load_file will now attempt to detect YAML/JSON content if the suffix
      is not .json, .yml or .yaml

1.4413    2014-02-17 20:04:23-05:00 America/New_York

    [FIXED]

    - UTF-8 decoding is done differently to avoid requiring
      a newer version of Encode (Graham Knop)

1.4412    2014-02-17 07:14:43-05:00 America/New_York

    [FIXED]

    - Added prerequisite on Encode 2.11 (Paul Howarth)

1.4411    2014-02-16 23:06:00-05:00 America/New_York

    [FIXED]

    - Invalid UTF-8 encoding in YAML files are now replaced with "PERLQQ"
      quoting from the Encode module and without warnings.

    - Removed legacy test modifications for $ENV{PERL_CORE}

1.4410    2014-02-16 00:47:48-05:00 America/New_York

    [INCOMPATIBLE CHANGES]

    - Dropped support for Perl's before v5.8.1 to ensure proper
      UTF-8 and IO layer support

    [CHANGED]

    - Updated CPAN::Meta::YAML prereq to 0.011 due to deprecation
      of 'errstr' and consistent use of exceptions

1.4409    2013-09-23 13:17:18 America/New_York

    [FIXED]

    - updated Makefile.PL logic to support PERL_NO_HIGHLANDER

1.4408    2013-09-23 11:06:35 America/New_York

    [FIXED]
