@@ -1,4 +1,3 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.037.
 use strict;
 use warnings;
 
@@ -13,7 +12,6 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "Parse-CPAN-Meta",
-  "EXE_FILES" => [],
   "LICENSE" => "perl",
   "MIN_PERL_VERSION" => "5.008001",
   "NAME" => "Parse::CPAN::Meta",
@@ -30,6 +28,7 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => "0.80",
     "File::Spec::Functions" => 0,
+    "JSON::PP" => "2.27200",
     "Test::More" => "0.47",
     "lib" => 0,
     "vars" => 0,
